Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <h1>My dev hub</h1>
         <p><h2>Scholar`s wed dev world</h2></p><hr />
-        <a href="./assets/images/movies.jpeg"><h2>movie hubs</a></h2>
-        <p><img src="./assets/images/movies.jpeg" height="230" width="300"></p><hr />
+        <a href="movies.jpeg"><h2>movie hubs</a></h2>
+        <p><img src="movies.jpeg" height="230" width="300"></p><hr />
         <p><h3>My dev zone</h3></p>
-        <p><img src="./assets/web1.jpeg" height="210" width="260"></p>
-        <img src="./assets/images/web2.jpeg" height="250" width="260">
+        <p><img src="web1.jpeg" height="210" width="260"></p>
+        <img src="web2.jpeg" height="250" width="260">
         <p><h3><a href="./about.html"> About me</a> //<a href="./contact.html">Contact me</a></h3></p>
     </body>
 </html>
