--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>My dev hub</h1>
         <p><h2>Scholar`s wed dev world</h2></p><hr />
-        <a href="./movie-ranking.html"><h2>movie hubs</a></h2>
+        <a href="movie-ranking.html"><h2>movie hubs</a></h2>
         <p><img src="./movies.jpeg" height="230" width="300"></p><hr />
         <p><h3>My dev zone</h3></p>
         <p><img src="./web1.jpeg" height="210" width="260"></p>
